--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "postintall": "npm run build-modernizr",
     "build-modernizr": "modernizr -c node_modules/modernizr/lib/config-all.json -d .",
-    "build": "gulp dev"
+    "start": "gulp dev",
+    "build": "gulp build",
+    "deploy": "gulp deploy"
   },
   "repository": {
     "type": "git",
@@ -24,9 +26,11 @@
     "modernizr": "^3.2.0"
   },
   "devDependencies": {
+    "del": "^2.2.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-livereload": "^3.8.1",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5"
