--- a/package.json
+++ b/package.json
@@ -23,17 +23,23 @@
   "homepage": "https://github.com/a2-team/musik-kunstschule#readme",
   "dependencies": {
     "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
     "materialize-css": "^0.97.3",
-    "modernizr": "^3.2.0"
+    "modernizr": "^3.2.0",
+    "moment": "^2.10.6"
   },
   "devDependencies": {
     "del": "^2.2.0",
     "express": "^4.13.3",
     "gh-pages": "^0.7.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-front-matter": "^1.3.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-jade": "^1.1.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-static-site": "github:timaschew/gulp-static-site",
     "require-dir": "^0.3.0",
     "rimraf": "^2.4.4",
     "run-sequence": "^1.1.5"
