fix typo, add build status into readme

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-modernizr": "modernizr -c node_modules/modernizr/lib/config-all.json -d .",
     "start": "gulp dev",
     "build": "gulp build",
-    "deploy": "gulp clean && gulp build && ./deploy"
+    "deploy": "gulp clean && gulp build && ./deploy.sh"
   },
   "repository": {
     "type": "git",
