--- a/src/contents/intro.yml
+++ b/src/contents/intro.yml
@@ -1,4 +1,4 @@
-headline: Wissenswertes
+headline: Intro
 subheadline: |
     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
     <span>Phasellus</span>
